# shgen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: shgen.h
src/: main.cpp  shgen.cpp  shgen_compiler.cpp  shgen_compiler.h  shgen_compiler_helper.cpp  shgen_compiler_helper.h  shgen_glsl.cpp  shgen_hlsl.cpp  shgen_opt.cpp  shgen_private.h
test/res/: fx.fx
